src/test/deca/context/invalid/homemade/instanceof_notidentifier.deca
class Ouaip{}

{
    Ouaip ouaip = new Ouaip();
    Ouaip ouaipp = new Ouaip();
    if (ouaipp instanceof ouaip) {
        println("Ouaip");
    }
}